# circuit-segmentation

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md
cmake/: FetchDependencies.cmake  README.md
diagrams/: class_diagram_overview.puml
docker/: Dockerfile  README.md
docs/architecture/: README.md  class_diagram_overview.puml
docs/results/: README.md
docs/results/circuit-1/: README.md
docs/results/circuit-1/assets/: segmentation_map.json
docs/results/circuit-2/: README.md
docs/results/circuit-2/assets/: segmentation_map.json
docs/results/circuit-3/: README.md
docs/results/circuit-3/assets/: segmentation_map.json
docs/results/circuit-4/: README.md
docs/results/circuit-4/assets/: segmentation_map.json
docs/results/limitations/example-1/: segmentation_map.json
docs/results/limitations/example-2/: segmentation_map.json
docs/segmentation-map/: segmentation-map.md
doxygen/: Doxyfile
scripts/: clang-format-check.sh  clang-tidy-check.sh  coverage-gcovr-gen.sh  coverage-lcov-gen.sh  doxygen-doc-gen.sh
src/: CMakeLists.txt  main.cpp
src/application/: Application.cpp  Application.h  CMakeLists.txt  CommandLineParser.cpp  CommandLineParser.h  Config.h  config.h
src/circuit/: CMakeLists.txt  Component.cpp  Component.h  Connection.cpp  Connection.h  Id.h  Label.cpp  Label.h  Node.cpp  Node.h  Port.cpp  Port.h  Position.h  Schematic.h
src/cmdLineParser/: CMakeLists.txt  CmdLineParser.cpp  CmdLineParser.h
src/common/: CMakeLists.txt  RandomNumberGen.cpp  RandomNumberGen.h  UuidGen.cpp  UuidGen.h
src/computerVision/: CMakeLists.txt  OpenCvWrapper.cpp  OpenCvWrapper.h
src/imageProcessing/: CMakeLists.txt  ImagePreprocessing.cpp  ImagePreprocessing.h  ImageProcManager.cpp  ImageProcManager.h  ImageProcUtils.cpp  ImageProcUtils.h  ImageReceiver.cpp  ImageReceiver.h  ImageSegmentation.cpp  ImageSegmentation.h  ImageUtils.h
src/logging/: CMakeLists.txt  Logger.cpp  Logger.h
src/schematicSegmentation/: CMakeLists.txt  ComponentDetection.cpp  ComponentDetection.h  ComponentSegmentation.cpp  ComponentSegmentation.h  ConnectionDetection.cpp  ConnectionDetection.h  ConnectionSegmentation.cpp  ConnectionSegmentation.h  LabelDetection.cpp  LabelDetection.h  RoiSegmentation.cpp  RoiSegmentation.h  SchematicSegmentation.cpp  SchematicSegmentation.h  SegmentationMap.cpp  SegmentationMap.h  SegmentationUtils.h
src/utils/: CMakeLists.txt  CmdLineParser.cpp  CmdLineParser.h
tests/: CMakeLists.txt
tests/mocks/: CMakeLists.txt
tests/mocks/circuit/: CMakeLists.txt  MockComponent.h  MockNode.h
tests/mocks/common/: CMakeLists.txt  MockRandomNumberGen.h
tests/mocks/computerVision/: CMakeLists.txt  MockOpenCvWrapper.h
tests/mocks/imageProcessing/: CMakeLists.txt  MockImagePreprocessing.h  MockImageProcUtils.h  MockImageReceiver.h  MockImageSegmentation.h
tests/mocks/logging/: CMakeLists.txt  MockLogger.h
tests/mocks/schematicSegmentation/: CMakeLists.txt  MockComponentDetection.h  MockComponentSegmentation.h  MockConnectionDetection.h  MockConnectionSegmentation.h  MockLabelDetection.h  MockRoiSegmentation.h  MockSchematicSegmentation.h  MockSegmentationMap.h
tests/unit/: CMakeLists.txt
tests/unit/application/: CMakeLists.txt  ut_CommandLineParser.cpp
tests/unit/circuit/: CMakeLists.txt  ut_Component.cpp  ut_Node.cpp
tests/unit/cmdLineParser/: CMakeLists.txt  ut_CmdLineParser.cpp
tests/unit/common/: CMakeLists.txt  ut_RandomNumberGen.cpp  ut_UuidGen.cpp
tests/unit/computerVision/: CMakeLists.txt  ut_OpenCvWrapper.cpp
tests/unit/imageProcessing/: CMakeLists.txt  ut_ImagePreprocessing.cpp  ut_ImageProcManager.cpp  ut_ImageProcUtils.cpp  ut_ImageReceiver.cpp  ut_ImageSegmentation.cpp  ut_ImageUtils.cpp
tests/unit/logging/: CMakeLists.txt  ut_Logger.cpp
tests/unit/schematicSegmentation/: CMakeLists.txt  ut_ComponentDetection.cpp  ut_ComponentSegmentation.cpp  ut_ConnectionDetection.cpp  ut_ConnectionSegmentation.cpp  ut_LabelDetection.cpp  ut_RoiSegmentation.cpp  ut_SchematicSegmentation.cpp  ut_SegmentationMap.cpp  ut_SegmentationUtils.cpp
tests/unit/utils/: CMakeLists.txt  ut_CmdLineParser.cpp
