# ----------------------------------------------------------------------------
# Build

# Subdirectories
add_subdirectory(application)
add_subdirectory(circuit)
add_subdirectory(cmdLineParser)
add_subdirectory(common)
add_subdirectory(computerVision)
add_subdirectory(imageProcessing)
add_subdirectory(logging)
